tests/regression/good/list.gr
import Vect

foo : Vect 3 Int
foo = Cons 1 (Cons 2 (Cons 3 Nil))

main : Vect 3 Int
main = map |(\(x : Int) -> x * 2)| foo
