tests/regression/illtyped/isEmpty.gr
import Prelude

isEmpty : forall (n : Nat=) . Vect n Int -> Bool
isEmpty xs =
    case xs of
      Nil        -> True;
      (Cons _ _) -> False
